[package]
name = "httpclient_oauth2"
version = "0.1.7"
edition = "2021"
description = "A simple OAuth2 client library for Rust. Provides middleware for httpclient."
license = "MIT"
repository = "https://github.com/kurtbuilds/httpclient_oauth2"
homepage = "https://github.com/kurtbuilds/httpclient_oauth2"
docs = "https://docs.rs/httpclient_oauth2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
serde = { version = "1.0.193", features = ["derive"] }
httpclient = "0.20.2"
serde_qs = "0.12.0"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.108"
oasgen = { version = "0.18.4" , optional = true }

[dev-dependencies]
serde_json = "1.0.108"
text_io = "0.1.12"
